--- a/app/src/main/res/layouts/crud/layout/activity_drink_edit.xml
+++ b/app/src/main/res/layouts/crud/layout/activity_drink_edit.xml
@@ -34,11 +34,10 @@
             app:layout_constraintBottom_toTopOf="@+id/tagsTV"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
+            app:layout_constraintTop_toBottomOf="@+id/alcoholicLinearLayout">
 
             <TextView
                 android:id="@+id/categoryLabel"
-                android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
@@ -50,7 +49,6 @@
 
             <EditText
                 android:id="@+id/categoryEditText"
-                android:inputType=""
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
@@ -62,7 +60,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout1"
+            android:id="@+id/alcoholicLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_padding"
@@ -204,10 +202,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutButtons"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/medium_padding"
-        android:layout_weight="50"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/linearLayoutInstruction"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -218,6 +215,7 @@
             android:id="@+id/updateBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="50"
             android:layout_margin="@dimen/big_padding"
             android:background="@color/colorPrimary"
             android:text="@string/button_update"
@@ -227,6 +225,7 @@
             android:id="@+id/exitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="50"
             android:layout_margin="@dimen/big_padding"
             android:background="@color/colorPrimary"
             android:text="@string/button_exitWithoutSaving"
