--- a/app/src/main/res/layouts/navbar/layout/fragment_drink_details.xml
+++ b/app/src/main/res/layouts/navbar/layout/fragment_drink_details.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nameTV">
 
         <LinearLayout
-            android:id="@+id/linearLayout2"
+            android:id="@+id/categoryLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_padding"
