Improved adding drinks, need to add missing ingredient validations

--- a/app/src/main/res/layouts/navbar/layout/add_details_fragment.xml
+++ b/app/src/main/res/layouts/navbar/layout/add_details_fragment.xml
@@ -216,7 +216,7 @@
         app:layout_constraintStart_toStartOf="parent" >
 
         <Button
-            android:id="@+id/updateBtn"
+            android:id="@+id/addBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
