--- a/app/src/main/res/layouts/navbar/layout/fragment_recipes.xml
+++ b/app/src/main/res/layouts/navbar/layout/fragment_recipes.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
+        android:gravity="left"
         android:queryHint="Search for drink name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/frameLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <FrameLayout
         android:id="@+id/frameLayout"
