--- a/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
+++ b/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -10,7 +11,7 @@
         android:layout_height="75dp"
         android:layout_gravity="center_vertical"
         android:contentDescription="@string/ingredient_image"
-        android:src="@drawable/ic_baseline_fastfood_24"/>
+        android:src="@drawable/ic_ingred"/>
 
     <LinearLayout
         android:layout_width="0dp"
