--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_recipes"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_recipe"
         android:title="@string/title_recipes" />
 
     <item
