Edit Drink Model Now Implements Tabs and pre-fills existing ingredients

--- a/app/src/main/res/layouts/navbar/layout/add_details_fragment.xml
+++ b/app/src/main/res/layouts/navbar/layout/add_details_fragment.xml
@@ -138,7 +138,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayoutGlasst"
+            android:id="@+id/linearLayoutGlass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_padding"
