--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--
-    TODO: Before you run your application, you need a Google Maps API key.
+    TODO: To use the map activity of this application, you will need to specify an API key
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
