--- a/app/src/main/res/layouts/rows/layout/activity_filter_drink.xml
+++ b/app/src/main/res/layouts/rows/layout/activity_filter_drink.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="radio_button_click"
-            android:text="Alchohlic" />
+            android:text="@string/alcoholic_label" />
 
         <RadioButton
             android:id="@+id/nonAlcoholicRadioBtn"
