--- a/app/src/main/res/layouts/rows/layout/drink_row.xml
+++ b/app/src/main/res/layouts/rows/layout/drink_row.xml
@@ -7,10 +7,10 @@
     style="@style/drink_title">
 
     <ImageView
+        android:layout_margin="5dp"
         android:id="@+id/imageView"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_gravity="end"
         android:contentDescription="@string/heart_image" />
 
     <LinearLayout
