--- a/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
+++ b/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
@@ -11,7 +11,7 @@
         android:layout_height="75dp"
         android:layout_gravity="center_vertical"
         android:contentDescription="@string/ingredient_image"
-        android:src="@drawable/ic_ingred"/>
+        android:src="@drawable/ic_ingredient_icon"/>
 
     <LinearLayout
         android:layout_width="0dp"
