Added scroll views to fix truncated fragments

--- a/app/src/main/res/layouts/crud/layout/activity_drink_edit.xml
+++ b/app/src/main/res/layouts/crud/layout/activity_drink_edit.xml
@@ -192,7 +192,7 @@
 
         <EditText
             android:id="@+id/instructionsEditText"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
